testdata/baselines/reference/submodule/conformance/typedefOnSemicolonClassElement.errors.txt
typedefOnSemicolonClassElement.js(4,14): error TS2304: Cannot find name 'A'.


==== typedefOnSemicolonClassElement.js (1 errors) ====
    export class Preferences {
      /** @typedef {string} A */
      ;
      /** @type {A} */
                 ~
!!! error TS2304: Cannot find name 'A'.
      a = 'ok'
    }
    